--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^1.0.1"
   },
@@ -42,5 +43,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy":"http://localhost:4000"
+  "proxy": "http://localhost:4000"
 }
